k8s/app/song/pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: API
  name: locomoco-song-pod
  namespace: local-mobile
spec:
  containers:
  - name: locomoco-song-container
    image: local.harbor.dev:80/mobile/locomoco-song:latest
