k8s/app/song/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: API
  name: locomoco-song-service
  namespace: local-mobile
spec:
  selector: 
    component: locomoco-song-pod
  ports:
  - name: http-port
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
